[package]
name = "s2n-quic-async-std"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.11.0"
s2n-quic-core = "0.2.0"
s2n-quic-platform = "0.2.0"
s2n-quic = "1.1.0"
cfg-if = "1.0.0"
futures = "0.3.21"
socket2 = "0.4.4"
async-io = "1.6.0"

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
